# webtrakr

./: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h  qrightclickbutton.cpp  qrightclickbutton.h  resources.qrc  sav.json  web-helper.cpp  web-helper.h
qt-android-cmake/: AddQtAndroidApk.cmake
